fixed row on mobile

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -111,7 +111,7 @@
     }
     display: grid;
     grid-gap: 6px;
-    grid-auto-rows: 10px;
+    grid-auto-rows: auto;
   }
 
   .tiles-grid-sizer,
